force-app/main/default/objects/Event_Persona__c/Event_Persona__c.object-meta.xml
<CustomObject>
    <label>Event Persona</label>
    <nameField>
        <displayFormat>EP-{0000000000}</displayFormat>
        <label>Event Persona Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Personas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>