force-app/main/default/objects/Event_Persona__c/recordTypes/EAN_Staff.recordType-meta.xml
<RecordType>
    <fullName>EAN_Staff</fullName>
    <active>true</active>
    <label>EAN Staff</label>
</RecordType>