force-app/main/default/objects/Event_Persona__c/recordTypes/EAN_Supplier.recordType-meta.xml
<RecordType>
    <fullName>EAN_Supplier</fullName>
    <active>true</active>
    <label>EAN Supplier</label>
</RecordType>