force-app/main/default/objects/Event_Persona__c/recordTypes/Grant_Winner.recordType-meta.xml
<RecordType>
    <fullName>Grant_Winner</fullName>
    <active>true</active>
    <label>Grant Winner</label>
</RecordType>