force-app/main/default/objects/Event_Persona__c/recordTypes/Invited_Person.recordType-meta.xml
<RecordType>
    <fullName>Invited_Person</fullName>
    <active>true</active>
    <label>Invited Person</label>
</RecordType>