force-app/main/default/objects/Event_Persona__c/recordTypes/Press.recordType-meta.xml
<RecordType>
    <fullName>Press</fullName>
    <active>true</active>
    <label>Press</label>
</RecordType>